[project]
name = "drawlego"
version = "0.1.0"
description = ""
authors = [
    {name = "Till Hofmann",email = "till.hofmann@ml.rwth-aachen.de"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyvista (>=0.47.3,<0.48.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
